--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 		<script src="js/sketch.js" type="text/javascript"></script>
-
+		<script src="js/canvas.js" type="text/javascript"></script>
 	</body>
 
 </html>
