--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 		<script src="js/sketch.js" type="text/javascript"></script>
 		<script src="js/canvas.js" type="text/javascript"></script>
+		<script src="js/slime.js" type="text/javascript"></script>
 	</body>
 
 </html>
