--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 		<script src="js/sketch.js" type="text/javascript"></script>
 		<script src="js/canvas.js" type="text/javascript"></script>
 		<script src="js/slime.js" type="text/javascript"></script>
+		<script src="js/fence.js" type="text/javascript"></script>
+		<script src="js/ball.js" type="text/javascript"></script>
+		<script src="js/ground.js" type="text/javascript"></script>
 	</body>
 
 </html>
