--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>
 			Play | Slime Volley
 		</title>
-		<meta content = "width = device.width , initial-scale = 1.0" name = "viewport">
+		<meta content = "width = device.width , initial-scale = 1.0" name = "viewport" charset="utf-8"/>> 
 		<link rel = "stylesheet" href = "vendor/bootstrap/css/bootstrap.min.css" type="text/css"/>
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"/> 
 		<link rel = "stylesheet" href = "css/main.css" type = "text/css"/>
