created a main menu

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<script src="js/fence.js" type="text/javascript"></script>
 		<script src="js/ball.js" type="text/javascript"></script>
 		<script src="js/ground.js" type="text/javascript"></script>
+		<script src="js/menu.js" type="text/javascript"></script>
 	</body>
 
 </html>
